fix bug & add docs
